# ugv02-bridge

./: # UGV02 Mowgli Bridge Development Guide.md  .gitignore  Dockerfile.dev  FutureEnhance.md  Macbuild.md  Pibuild.md  README.md  docker-compose.dev.yml
config/: ugv_robot_profile.yaml
deploy/: docker-compose.override.yml
mowgli-orig-files/: README.md
mowgli-orig-files/ros2/src/mowgli_bringup/launch/: full_system.launch.py  mowgli.launch.py
mowgli-replace-files/: README.md
mowgli-replace-files/ros2/src/mowgli_bringup/launch/: full_system.launch.py  mowgli.launch.py
scripts/: apply-mowgli-replace-files.sh  apply-ugv-robot-profile.sh  sync-to-pi.sh  ugv-cutover-entrypoint.sh
src/ugv_mowgli_bridge/: CMakeLists.txt  package.xml
src/ugv_mowgli_bridge/config/: params.yaml
src/ugv_mowgli_bridge/include/ugv_mowgli_bridge/: ugv_bridge.hpp
src/ugv_mowgli_bridge/launch/: ugv_hardware_bridge.launch.py
src/ugv_mowgli_bridge/src/: ugv_bridge.cpp  ugv_hardware_bridge.cpp
