<?xml version="1.0"?>
<package format="3">
  <name>ugv_mowgli_bridge</name>
  <version>0.1.0</version>
  <description>UGV02 to Mowgli Hardware Bridge</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>mowgli_interfaces</depend>
  <depend>serial</depend>
  <depend>nlohmann_json</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
